fixed css bug on register page component causing the header to align to the left.

--- a/src/components/RegisterPage/RegisterPage.css
+++ b/src/components/RegisterPage/RegisterPage.css
@@ -7,9 +7,10 @@
     color: slateblue;
     text-align: center;
     font-weight: bolder;
-    display: block;
+    display: flex;
     margin: auto;
     flex-direction: column;
+    justify-content: end;
 }
 
 .card-body {
